iphone nav spacing issues fix

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -62,7 +62,7 @@
     list-style: none
     color: #000
     margin: 0px 0
-    padding: 0 0 0 25px
+    padding: 10px 0 0 25px
     line-height: 1.7
     padding-bottom: 15px
     cursor: pointer
